--- a/real-app/real-app.vcxproj
+++ b/real-app/real-app.vcxproj
@@ -18,9 +18,15 @@
     <ClCompile Include="src\CurlWrapper\Writers\CurlMemoryWriter.cpp" />
     <ClCompile Include="src\CurlWrapper\Writers\CurlWriter.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\OStreamSink.cpp" />
+    <ClCompile Include="src\Windows\Console.cpp" />
+    <ClCompile Include="src\Windows\Exception.cpp" />
+    <ClCompile Include="src\Windows\MessagingWindow.cpp" />
     <ClCompile Include="src\Windows\MinimumLatencyAudioClient.cpp" />
     <ClCompile Include="src\Version.cpp" />
     <ClCompile Include="src\Windows\Filesystem.cpp" />
+    <ClCompile Include="src\Windows\GlobalWindowProcedure.cpp" />
+    <ClCompile Include="src\Windows\TrayIcon.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
@@ -30,9 +36,15 @@
     <ClInclude Include="src\CurlWrapper\Writers\CurlFileWriter.h" />
     <ClInclude Include="src\CurlWrapper\Writers\CurlWriter.h" />
     <ClInclude Include="src\CurlWrapper\Writers\CurlMemoryWriter.h" />
+    <ClInclude Include="src\OStreamSink.h" />
+    <ClInclude Include="src\Windows\Console.h" />
+    <ClInclude Include="src\Windows\Exception.h" />
+    <ClInclude Include="src\Windows\MessagingWindow.h" />
     <ClInclude Include="src\Windows\MinimumLatencyAudioClient.h" />
     <ClInclude Include="src\Version.h" />
     <ClInclude Include="src\Windows\Filesystem.h" />
+    <ClInclude Include="src\Windows\GlobalWindowProcedure.h" />
+    <ClInclude Include="src\Windows\TrayIcon.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="real-app.rc" />
@@ -101,7 +113,7 @@
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
-      <SubSystem>NotSet</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <AdditionalDependencies>libcurl_a.lib;Ws2_32.lib;crypt32.lib;Wldap32.lib;Normaliz.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -123,7 +135,7 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <SubSystem>NotSet</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <AdditionalDependencies>libcurl_a.lib;Ws2_32.lib;crypt32.lib;Wldap32.lib;Normaliz.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
