--- a/real-app/real-app.vcxproj
+++ b/real-app/real-app.vcxproj
@@ -12,7 +12,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\AutoUpdater.cpp" />
-    <ClCompile Include="src\CurlWrapper\CurlException.cpp" />
     <ClCompile Include="src\CurlWrapper\CurlHandle.cpp" />
     <ClCompile Include="src\CurlWrapper\Writers\CurlFileWriter.cpp" />
     <ClCompile Include="src\CurlWrapper\Writers\CurlMemoryWriter.cpp" />
@@ -20,7 +19,7 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\OStreamSink.cpp" />
     <ClCompile Include="src\Windows\Console.cpp" />
-    <ClCompile Include="src\Windows\Exception.cpp" />
+    <ClCompile Include="src\Windows\WindowsError.cpp" />
     <ClCompile Include="src\Windows\MessagingWindow.cpp" />
     <ClCompile Include="src\Windows\MinimumLatencyAudioClient.cpp" />
     <ClCompile Include="src\Version.cpp" />
@@ -31,14 +30,15 @@
   <ItemGroup>
     <ClInclude Include="resource.h" />
     <ClInclude Include="src\AutoUpdater.h" />
-    <ClInclude Include="src\CurlWrapper\CurlException.h" />
+    <ClInclude Include="src\CurlWrapper\CurlError.h" />
     <ClInclude Include="src\CurlWrapper\CurlHandle.h" />
     <ClInclude Include="src\CurlWrapper\Writers\CurlFileWriter.h" />
     <ClInclude Include="src\CurlWrapper\Writers\CurlWriter.h" />
     <ClInclude Include="src\CurlWrapper\Writers\CurlMemoryWriter.h" />
     <ClInclude Include="src\OStreamSink.h" />
+    <ClInclude Include="src\ExpectedError.h" />
     <ClInclude Include="src\Windows\Console.h" />
-    <ClInclude Include="src\Windows\Exception.h" />
+    <ClInclude Include="src\Windows\WindowsError.h" />
     <ClInclude Include="src\Windows\MessagingWindow.h" />
     <ClInclude Include="src\Windows\MinimumLatencyAudioClient.h" />
     <ClInclude Include="src\Version.h" />
@@ -88,14 +88,14 @@
     <OutDir>$(SolutionDir)bin\$(Platform)\$(Configuration)\$(ProjectName)\</OutDir>
     <IntDir>$(SolutionDir)out\$(Platform)\$(Configuration)\$(ProjectName)\</IntDir>
     <TargetName>REAL</TargetName>
-    <IncludePath>$(ProjectDir)deps\json;$(ProjectDir)deps\curl\curl-src\builds\libcurl-vc15-x64-release-static-ipv6-sspi-winssl\include;$(ProjectDir)deps\spdlog\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)deps\json;$(ProjectDir)deps\curl\curl-src\builds\libcurl-vc15-x64-release-static-ipv6-sspi-winssl\include;$(ProjectDir)deps\spdlog\include;$(ProjectDir)deps\expected\include;$(IncludePath)</IncludePath>
     <LibraryPath>$(ProjectDir)deps\curl\curl-src\builds\libcurl-vc15-x64-release-static-ipv6-sspi-winssl\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)bin\$(Platform)\$(Configuration)\$(ProjectName)\</OutDir>
     <IntDir>$(SolutionDir)out\$(Platform)\$(Configuration)\$(ProjectName)\</IntDir>
     <TargetName>REAL</TargetName>
-    <IncludePath>$(ProjectDir)deps\json;$(ProjectDir)deps\curl\curl-src\builds\libcurl-vc15-x64-release-static-ipv6-sspi-winssl\include;$(ProjectDir)deps\spdlog\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)deps\json;$(ProjectDir)deps\curl\curl-src\builds\libcurl-vc15-x64-release-static-ipv6-sspi-winssl\include;$(ProjectDir)deps\spdlog\include;$(ProjectDir)deps\expected\include;$(IncludePath)</IncludePath>
     <LibraryPath>$(ProjectDir)deps\curl\curl-src\builds\libcurl-vc15-x64-release-static-ipv6-sspi-winssl\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
