--- a/real-app/deps/curl/CMakeLists.txt.in
+++ b/real-app/deps/curl/CMakeLists.txt.in
@@ -10,6 +10,7 @@ ExternalProject_Add(
     SOURCE_DIR "git"
     GIT_REPOSITORY https://github.com/curl/curl
     GIT_TAG tags/curl-7_62_0
+    GIT_SHALLOW true
     GIT_PROGRESS true
     CONFIGURE_COMMAND buildconf.bat
     BUILD_COMMAND "${CMAKE_CURRENT_LIST_DIR}/build.bat"
